# libfnv

./: AUTHORS  LICENSE  Makefile.am  NEWS  README  README.md  circle.yml  configure.ac
lib/: fnv.map  fnv.sym  fnvutil.map  fnvutil.sym  libfnv.pc.in
libfnv/: Makefile.am  arith1024.c  arith1024.h  arith128.c  arith128.h  arith256.c  arith256.h  arith512.c  arith512.h  fnv.c  fnv1024mp.c  fnv128mp.c  fnv256mp.c  fnv512mp.c  fnv64basic.c  fnv64boost.s  fnv64cboost.c  ifnv.h  kara128.c  kara128.h  mgmp.c  mgmp.h
libfnv/asmtest/: fastfnv64a.s  testasm.c
libfnv/include/: fnv.h
libfnv/include/fnv/: fnvtop.h  libfnv.h
libfnvutil/: Makefile.am  fnvutil.c  fnvutil.h
man/: fnv1024sum.1  fnv128.1  fnv256sum.1  fnv32.1  fnv32sum.1  fnv512sum.1  fnv64.1  fnv64sum.1
test/: Makefile.am  all  arithrunner  arithtest.c  compile-dist-test  compile-test  run-tools-test  run-unitcheck-test
test/unit/: Makefile.am  basic_fnvutil.ts  basic_full.ts  benchmark.c
tools/: Makefile.am  fnv1024sum  fnv1024sum.c  fnv128sum.c  fnv256sum.c  fnv32sum.c  fnv512sum  fnv512sum.c  fnv64.c  fnv64sum.c
