bin_PROGRAMS=fnv32sum fnv64sum fnv128sum fnv256sum fnv512sum fnv1024sum

fnv1024sum_SOURCES=fnv1024sum.c
fnv1024sum_CPPFLAGS=-I../libfnv/include -Wall -I../libfnvutil
fnv1024sum_LDADD =../libfnv/libfnv.la ../libfnvutil/libfnvutil.la

fnv512sum_SOURCES=fnv512sum.c
fnv512sum_CPPFLAGS=-I../libfnv/include -Wall -I../libfnvutil
fnv512sum_LDADD =../libfnv/libfnv.la ../libfnvutil/libfnvutil.la

fnv256sum_SOURCES=fnv256sum.c
fnv256sum_CPPFLAGS=-I../libfnv/include -Wall -I../libfnvutil
fnv256sum_LDADD =../libfnv/libfnv.la ../libfnvutil/libfnvutil.la

fnv128sum_SOURCES=fnv128sum.c
fnv128sum_CPPFLAGS=-I../libfnv/include -Wall -I../libfnvutil
fnv128sum_LDADD =../libfnv/libfnv.la ../libfnvutil/libfnvutil.la

fnv64sum_SOURCES=fnv64sum.c
fnv64sum_CPPFLAGS=-I../libfnv/include -Wall -I../libfnvutil
fnv64sum_LDADD =../libfnv/libfnv.la ../libfnvutil/libfnvutil.la

fnv32sum_SOURCES=fnv32sum.c
fnv32sum_CPPFLAGS=-I../libfnv/include -Wall -I../libfnvutil
fnv32sum_LDADD =../libfnv/libfnv.la ../libfnvutil/libfnvutil.la
